@@ -1,23 +1,35 @@
 package ca.corbett.imageviewer.ui.imagesets;
 
+import ca.corbett.extras.image.ImageUtil;
+import ca.corbett.imageviewer.ToolBarManager;
 import ca.corbett.imageviewer.ui.MainWindow;
 import ca.corbett.imageviewer.ui.actions.ImageSetDeleteAction;
 import ca.corbett.imageviewer.ui.actions.ImageSetEditAction;
+import ca.corbett.imageviewer.ui.actions.ImageSetLoadAction;
 import ca.corbett.imageviewer.ui.actions.ImageSetRenameAction;
+import ca.corbett.imageviewer.ui.actions.ImageSetSaveAction;
 
-import javax.swing.JButton;
+import javax.swing.JLabel;
 import javax.swing.JPanel;
 import javax.swing.JScrollPane;
+import javax.swing.JToolBar;
+import javax.swing.UIManager;
 import javax.swing.event.TreeSelectionEvent;
 import javax.swing.event.TreeSelectionListener;
 import javax.swing.tree.DefaultMutableTreeNode;
 import java.awt.BorderLayout;
 import java.awt.Dimension;
 import java.awt.FlowLayout;
+import java.awt.image.BufferedImage;
+import java.io.IOException;
 import java.util.List;
 import java.util.Optional;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 public class ImageSetPanel extends JPanel {
+
+    private static final Logger logger = Logger.getLogger(ImageSetPanel.class.getName());
 
     private final ImageSetTree imageSetTree;
 
@@ -66,36 +78,63 @@ public class ImageSetPanel extends JPanel {
         return imageSetTree.addImageSet(set);
     }
 
-    private JPanel buildToolbar() {
-        JPanel toolbar = new JPanel();
-        toolbar.setLayout(new FlowLayout(FlowLayout.LEFT));
-        // TODO give this button an icon instead of a text label, make it pretty
-        JButton button = new JButton(new ImageSetEditAction("Edit"));
-        button.setPreferredSize(new Dimension(80, 23));
-        toolbar.add(button);
+    private JToolBar buildToolbar() {
+        JToolBar toolbar = new JToolBar();
+        toolbar.setFloatable(false);
+        JPanel wrapper = new JPanel();
+        wrapper.setBackground(UIManager.getDefaults().getColor("Button.background"));
+        wrapper.setLayout(new FlowLayout(FlowLayout.LEFT, 4, 4));
+        wrapper.setPreferredSize(new Dimension(500, 28));
 
-        // TODO reintroduce these once we have an icon set for them
-//        button = new JButton(new ImageSetSaveAction("Save"));
-//        button.setPreferredSize(new Dimension(60, 23));
-//        toolbar.add(button);
-//
-//        button = new JButton(new ImageSetLoadAction("Load"));
-//        button.setPreferredSize(new Dimension(60, 23));
-//        toolbar.add(button);
+        try {
+            wrapper.add(ToolBarManager.buildButton(
+                    loadIconImage("icon-document-edit.png"),
+                    "Edit image set",
+                    new ImageSetEditAction("Edit image set"), 22));
 
-        button = new JButton(new ImageSetDeleteAction("Delete"));
-        button.setPreferredSize(new Dimension(80, 23));
-        toolbar.add(button);
+            wrapper.add(ToolBarManager.buildButton(
+                    loadIconImage("icon-document-upload.png"),
+                    "Rename/move this image set",
+                    new ImageSetRenameAction("Rename/move this image set"), 22));
 
-        button = new JButton(new ImageSetRenameAction("Rename/move this image set"));
-        button.setPreferredSize(new Dimension(80, 23));
-        toolbar.add(button);
+            wrapper.add(ToolBarManager.buildButton(
+                    loadIconImage("icon-x.png"),
+                    "Delete this image set",
+                    new ImageSetDeleteAction("Delete this image set"), 22));
 
+            wrapper.add(new JLabel(" "));
+
+            wrapper.add(ToolBarManager.buildButton(
+                    loadIconImage("icon-reboot.png"),
+                    "Discard changes and reload all image sets",
+                    new ImageSetLoadAction("Discard changes and reload all image sets", true), 22));
+
+            wrapper.add(ToolBarManager.buildButton(
+                    loadIconImage("icon-save.png"),
+                    "Save changes",
+                    new ImageSetSaveAction("Save changes"), 22));
+        }
+        catch (IOException ioe) {
+            logger.log(Level.SEVERE, "Error loading icon image: " + ioe.getMessage(), ioe);
+        }
+
+        toolbar.add(wrapper);
         return toolbar;
     }
 
     private void handleTreeSelectionChanged(TreeSelectionEvent event) {
         // Passing null is allowed here, it will clear the thumb panel:
         MainWindow.getInstance().setImageSet(getSelectedImageSet().orElse(null));
+    }
+
+    /**
+     * Invoked internally to load an icon image from resources, scale it if needed, and return it.
+     */
+    private static BufferedImage loadIconImage(String resourceName) throws IOException {
+        final int iconSize = 18;
+        return ImageUtil.loadFromResource(MainWindow.class,
+                                          "/ca/corbett/imageviewer/images/" + resourceName,
+                                          iconSize,
+                                          iconSize);
     }
 }
